# TriCloudEdge-Testbed

./: AWS-SETUP-BASICS.md  HOWTO SET HW.txt  QEMU_HOWTO.txt  menuconfig settings discussion.txt  readme.md
esp32-face-detect-websocket-client/: readme.md
esp32-face-detect-websocket-client/components/: readme.md
esp32-face-detect-websocket-client/components/modules/ai/: who_human_face_detection.cpp  who_human_face_detection.hpp
esp32-face-detect-websocket-client/components/modules/camera/: who_camera.c
esp32-face-detect-websocket-client/main/: CMakeLists.txt  app_main.cpp  config.h  face_sender.cpp  face_sender.h  heartbeat.cpp  heartbeat.h  message_handler.cpp  message_handler.h  secret.h.teplate  websocket_client.cpp  websocket_client.h  wifi.c
esp32-s3-websocket_server/: idf_component.yml  partitions.csv  readme.md  sdkconfig  secret.h.template
esp32-s3-websocket_server/bin_files_view_upload/: readme.md  s3TestUpload.py  s3upload.md  view_raw_image.py
esp32-s3-websocket_server/main/: CMakeLists.txt  app_diagnostics.c  app_diagnostics.h  config.h  face_database.c  face_database.h  face_enroller.cpp  face_enroller.h  face_recognizer.cpp  face_recognizer.hpp  image_processor.cpp  image_processor.h  main.cpp  mqtt.c  mqtt.h  s3_uploader.c  s3_uploader.h  storage_manager.c  storage_manager.h  time_sync.c  time_sync.h  websocket_server.cpp  websocket_server.h  wifi.c  wifi.h
